// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`WriterMarkdown props table includes binding metadata 1`] = `
"# Component Index

## Components

  - [\`Example\`](#example)

---

## \`Example\`

### Props

| Prop name | Required | Kind | Reactive | Binding | Type | Default value | Description |
| :- | :- | :- | :- | :- | :- | :- | :- |
| open | No | <code>let</code> | Yes | writable | -- | -- | Shared state. |
| size | No | <code>let</code> | No | readonly | -- | -- | Current value. |
| label | No | <code>let</code> | No | -- | -- | -- | Label text. |
### Slots

None.

### Events

None.

"
`;

exports[`WriterMarkdown slots table renders descriptions and pass-through tags 1`] = `
"# Component Index

## Components

  - [\`Example\`](#example)

---

## \`Example\`

### Props

None.

### Slots

| Slot name | Default | Props | Fallback | Description |
| :- | :- | :- | :- | :- |
| -- | Yes | <code>{ prop: number } </code> | -- | Default content.<br />Spans two lines.<br />@deprecated Prefer the \`body\` slot.<br />@since 1.2.0 |
| title | No | -- | -- | Heading content.<br />@example &lt;Example&gt;Hi&lt;/Example&gt; |
| footer | No | -- | -- | -- |
### Events

None.

"
`;
